--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 
 <body>
   <div class="top-container">
-    <img class="top-cloud" src="images/cloud.png" alt="cloud-image">
+    <img class="top-cloud" src="cloud.png" alt="cloud-image">
 
     <h1>I'm Sanchit.</h1>
     <h2>a full stack web developer.</h2>
 
-    <img class="bottom-cloud" src="images/cloud.png" alt="cloud-image">
-    <img src="images/mountain.png" alt="mountain-image">
+    <img class="bottom-cloud" src="cloud.png" alt="cloud-image">
+    <img src="mountain.png" alt="mountain-image">
   </div>
 
   <div class="middle-container">
